# kegeproject

./: .gitignore  .pylintrc  README.md  locustfile.py  passenger_wsgi.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_in_venv.py  run_locust.py  run_tests_local.py  АИС Техническое задание.docx  Техническое задание.docx
.github/workflows/: db-tests.yml  pylint.yml
app/: __init__.py  cli.py  config.py  extensions.py
app/admin/: __init__.py  base_view.py  tasks_view.py  users_view.py  variant_view.py
app/forms/: auth.py  generic.py  profile.py  tasks.py  users.py  variants.py
app/models/: __init__.py  attempt_answers.py  attempts.py  model_abc.py  roles.py  task_attachments.py  tasks.py  user.py  user_avatars.py  user_roles.py  users.py  variant_tasks.py  variants.py
app/routes/: attachments.py  attempts.py  auth.py  error_handlers.py  pages.py  profile.py  tasks.py  users.py  variants.py
app/services/: attempt_service.py  dashboard_service.py  task_services.py  user_stats_service.py  variant_services.py
app/templates/: about.html  base.html  error.html  index.html  login.html  profile.html  register.html  stats.html  tasks.html
app/utils/: date_utils.py  name_utils.py  seed_test_data.py  text_utils.py  variant_utils.py
migrations/versions/: 0ee1ab19faac_init.py  43571b8bbd4f_снова_начальная_миграция.py  61b89baaad9c_add_order_to_variant_task.py  681ebbf0351e_add_author_id_to_variants_registered_at_.py  76f208fa46f7_1_версия_бд.py  b93aaecf9d95_add_variant_duration_attempt_answer_.py  bd1bf5dd7e56_первый_вызов.py  dd2faa060877_.py  (+7 more)
(+50 files in other folders)
